--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,18 +2,33 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mstack.toolstracker" >
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".MainActivity" >
+        <activity android:name=".SplashScreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".MainActivity" >
+        </activity>
+        <activity android:name=".ScanQRActivity" >
+        </activity>
+        <activity
+            android:name=".scanqr.ScannerQRActivity"
+            android:screenOrientation="landscape" >
+        </activity>
+        <activity android:name=".DetailActivity" >
+        </activity>
+        <activity android:name=".SettingActivity" >
         </activity>
     </application>
 
