--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
     }
 }
 
+apply plugin: 'com.neenbedankt.android-apt'
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.0'
@@ -26,5 +27,9 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.0'
     compile 'com.jakewharton:butterknife:5.1.1'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
+    apt 'com.raizlabs.android:DBFlow-Compiler:2.2.1'
+    compile 'com.raizlabs.android:DBFlow-Core:2.2.1'
+    compile 'com.raizlabs.android:DBFlow:2.2.1'
+    compile 'com.daimajia.swipelayout:library:1.2.0@aar'
     compile files('libs/zbar.jar')
 }
