--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
@@ -21,10 +21,6 @@
         <activity android:name=".MainActivity" >
         </activity>
         <activity android:name=".ScanQRActivity" >
-        </activity>
-        <activity
-            android:name=".scanqr.ScannerQRActivity"
-            android:screenOrientation="landscape" >
         </activity>
         <activity android:name=".DetailActivity" >
         </activity>
