--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
         </activity>
         <activity android:name=".SettingActivity" >
         </activity>
+        <activity android:name=".DetailFromDB" >
+        </activity>
     </application>
 
 </manifest>
